<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFFFF"
        android:paddingLeft="10dp" >
       
        <TextView 
            android:id="@+id/reservationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="16sp"
            android:textColor="#FF444444"
            android:text="Reservation Name"
         />
        <TextView 
            android:id="@+id/partyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="12sp"
            android:textColor="#FF999999"
            android:layout_below="@+id/reservationName"
            android:text="4"
         />
        <Button
            android:id="@+id/waitTime"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/small_buttons"
            android:text="@string/waitTime"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/reservationName"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            />
        <Button
            android:id="@+id/seatingTable"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/small_buttons"
            android:text="@string/tableNumber"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/waitTime"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            />
        <Button 
            android:id="@+id/sendText"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/small_buttons"
            android:textSize="12sp"
            android:textColor="#FF999999"
            android:layout_toRightOf="@+id/seatingTable"
            android:text="@string/SMS"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
         />
        <Button 
            android:id="@+id/clearReservation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/small_buttons"
            android:textSize="12sp"
            android:textColor="#FF999999"
            android:layout_toRightOf="@+id/sendText"
            android:text="@string/Cancel"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
         />
        
         
    </RelativeLayout>
